Make sure the query is in front of the deck
It wasn't possible to highlight and copy/paste the search query, because
it was "behind" an invisible part of another element. This should push
it to the front allowing for copy/paste correctly.

--- a/public/css/deck.css
+++ b/public/css/deck.css
@@ -51,6 +51,7 @@ em {
     padding: 12px 12px 0 12px;
     margin-left: 18px;
     color: white;
+    z-index: 99;
 }
 
 .query {
